--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Drag and Drop</title>
+    <script src="main.js" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css">
 </head>
 <body>
-    
+    <div class="maincontainer w-max m-auto mt-[15%] flex">
+        <div class="container1 w-[250px] mt-[10%]">
+        <div class="inner1 w-[150px] flex items-center">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 1</p>
+        </div>
+        <div class="inner1 w-[150px] flex items-center">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 2</p>
+        </div>
+        <div class="inner1 w-[150px] flex items-center">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 3</p>
+        </div>
+        <div class="inner1 w-[150px] flex items-center">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 4</p>
+        </div>
+        <div class="inner1 w-[150px] flex items-center">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 1</p>
+        </div>
+        
+    </div>
+    <div class="container2 w-[250px] border">
+
+    </div>
+    </div>
+   
 </body>
 </html>
