style: improve layout and visual design

--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css">
 </head>
-<body>
-    <div class="maincontainer w-max m-auto mt-[15%] flex">
-        <div class="container1 w-[250px] mt-[10%]">
-        <div class="inner1 w-[150px] flex items-center">         
-           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 1</p>
+<body class="bg-[#0C0626]">
+    <div class="maincontainer w-max m-auto mt-[15%] flex gap-10 text-white font-light">
+        <div class="container1 w-[250px] flex flex-col gap-3 px-5 py-7 outline-white outline-2 outline-dashed">
+        <div class="inner1 w-full h-[40px] flex items-center bg-[#FB3664]">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 1</p>
         </div>
-        <div class="inner1 w-[150px] flex items-center">         
-           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 2</p>
+        <div class="inner w-full h-[40px] flex items-center bg-[#FB3664]">
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 2</p>
         </div>
-        <div class="inner1 w-[150px] flex items-center">         
-           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 3</p>
+        <div class="inner w-full h-[40px] flex items-center bg-[#FB3664]">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 3</p>
         </div>
-        <div class="inner1 w-[150px] flex items-center">         
-           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 4</p>
+        <div class="inner w-full h-[40px] flex items-center bg-[#FB3664]">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 4</p>
         </div>
-        <div class="inner1 w-[150px] flex items-center">         
-           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center">List Items 1</p>
+        <div class="inner w-full h-[40px] flex items-center bg-[#FB3664]">         
+           <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 5</p>
         </div>
         
     </div>
-    <div class="container2 w-[250px] border">
+    <div class="container2 w-[250px] outline-white outline-2 outline-dashed">
 
     </div>
     </div>
