feat: implement bidirectional drag-and-drop between containers

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 </head>
 <body class="bg-[#0C0626]">
     <div class="maincontainer w-max m-auto mt-[15%] flex gap-10 text-white font-light">
-        <div class="container1 w-[250px] flex flex-col gap-3 px-5 py-7 outline-white outline-2 outline-dashed">
-        <div class="inner1 w-full h-[40px] flex items-center bg-[#FB3664]">         
+        <div class="container1 w-[250px] h-[304px] flex flex-col gap-3 px-5 py-7 outline-white outline-2 outline-dashed" id="container1">
+        <div class="dragitem inner1 w-full h-[40px] flex items-center bg-[#FB3664]" draggable="true">         
            <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 1</p>
         </div>
-        <div class="inner w-full h-[40px] flex items-center bg-[#FB3664]">
+        <div class="dragitem inner w-full h-[40px] flex items-center bg-[#FB3664]" draggable="true">
            <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 2</p>
         </div>
-        <div class="inner w-full h-[40px] flex items-center bg-[#FB3664]">         
+        <div class="dragitem inner w-full h-[40px] flex items-center bg-[#FB3664]" draggable="true">         
            <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 3</p>
         </div>
-        <div class="inner w-full h-[40px] flex items-center bg-[#FB3664]">         
+        <div class="dragitem inner w-full h-[40px] flex items-center bg-[#FB3664]" draggable="true">         
            <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 4</p>
         </div>
-        <div class="inner w-full h-[40px] flex items-center bg-[#FB3664]">         
+        <div class="dragitem inner w-full h-[40px] flex items-center bg-[#FB3664]" draggable="true">         
            <i class="fi fi-sr-grip-dots-vertical px-2"></i> <p class="text-center pb-1">List Items 5</p>
         </div>
         
     </div>
-    <div class="container2 w-[250px] outline-white outline-2 outline-dashed">
+    <div class="container2 w-[250px] h-[304px] flex flex-col gap-3 px-5 py-7 outline-white outline-2 outline-dashed" id="container2" draggable="true">
 
     </div>
     </div>
