prevent selection of text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         
     </div>
-    <div class="container2 w-[250px] h-[320px] flex flex-col gap-3 px-5 py-7 outline-white outline-2 outline-dashed" id="container2" >
+    <div class="container2 w-[250px] h-[320px] flex flex-col gap-3 px-5 py-7 outline-white outline-2 outline-dashed select-none" id="container2" >
 
     </div>
     </div>
